--- a/sass/_default-theme.scss
+++ b/sass/_default-theme.scss
@@ -48,7 +48,7 @@ $drop-shadow: 													0 2px 3px rgba(231,231,231,0.50);
 $color-keyline-light: 									#F8F8F8;
 $color-keyline-dark: #D8D8D8;
 $font-family-primary: "jaf-bernino-sans", 'proxima nova';
-
+$font-base-size: 16px
 
 
 
