--- a/sass/components/_inc/_normalise.sass
+++ b/sass/components/_inc/_normalise.sass
@@ -21,7 +21,7 @@ time, mark, audio, video
 
 html
 	font-family: $font-family-primary
-	font-size: 14px // This is the only case where px unit is used
+	font-size: $font-base-size 
 	line-height: 1
 	color: colours(greyscale, dark)
 	min-height: 100%
