--- a/sass/components/components.sass
+++ b/sass/components/components.sass
@@ -19,6 +19,7 @@
 @import "_inc/subheading"
 @import "_inc/switch"
 @import "_inc/tabs"
+@import "_inc/tables"
 @import "_inc/toggle"
 @import "_inc/tool-tip"
 @import "_inc/typeahead"
