--- a/sass/config/_inc/_text-sizes.scss
+++ b/sass/config/_inc/_text-sizes.scss
@@ -23,13 +23,13 @@ $text-sizing: (
   ),
   base: (
     device-small: (
-      font-size: rem(14px)
+      font-size: 14px
     ),
     device-medium: (
-      font-size: rem(16px)
+      font-size: 16px
     ), 
     device-large: (
-      font-size: rem(16px)
+      font-size: 16px
     )
   ),
   medium: (
