--- a/docs/_14139e58-9ebe-4c0f-beca-73a65bb01ce9/widgets.css
+++ b/docs/_14139e58-9ebe-4c0f-beca-73a65bb01ce9/widgets.css
@@ -1,75 +1,80 @@
-.text-muted {
-  color: #E3E3E3; }
+.screenshot-crop {
+  overflow: hidden; }
+  .screenshot-crop img {
+    position: relative;
+    bottom: -12px; }
 
-.button, button {
+.text-muted {
+  color: #BABABA; }
+
+button, .button {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
-  -webkit-appearance: none;
   display: inline-block;
   background: transparent;
-  font-weight: 600;
+  padding: 0 32px;
+  height: 48px;
+  line-height: 48px;
+  font-weight: 500;
   font-family: "avenir next", Helvetica, Arial, sans-serif;
-  font-size: 14px;
   text-decoration: none;
-  text-transform: capitalize;
   text-align: center;
-  padding: 16px 24px;
-  line-height: 1 !important;
   cursor: pointer;
-  min-width: inherit; }
-  .button.primary, button.primary {
-    border-color: #157AFB;
+  -webkit-appearance: none; }
+  button.rounded, .button.rounded {
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    border-radius: 50px; }
+  button.white, .button.white {
+    color: #157AFB !important; }
+  button.small, .button.small {
+    height: 42px;
+    font-size: 12px;
+    line-height: 42px;
+    padding: 0 18px; }
+  button.medium, .button.medium {
+    height: 49px;
+    font-size: 14px;
+    line-height: 49px;
+    padding: 0 21px; }
+  button.large, .button.large {
+    height: 56px;
+    font-size: 16px;
+    line-height: 56px;
+    padding: 0 24px; }
+  button.primary, .button.primary {
     background: #157AFB;
     color: white; }
-    .button.primary:hover, button.primary:hover {
-      background: #008de6; }
-  .button.bordered, button.bordered {
-    border: 2px solid #49565E;
-    color: #49565E; }
-  .button.rounded, button.rounded {
-    -webkit-border-radius: 40px;
-    -moz-border-radius: 40px;
-    -ms-border-radius: 40px;
-    -o-border-radius: 40px;
-    border-radius: 40px; }
-  .button.secondary, button.secondary {
+    button.primary.bordered, .button.primary.bordered {
+      background: transparent;
+      border: 1px solid #157AFB;
+      color: #157AFB; }
+  button.secondary, .button.secondary {
     background: #0CDD9E;
     color: white; }
-    .button.secondary:hover, button.secondary:hover {
-      background: #008de6; }
-  .button.grey, button.grey {
-    background: #e5e5e5;
-    border: 0;
+    button.secondary.bordered, .button.secondary.bordered {
+      background: transparent;
+      border: 1px solid #0CDD9E;
+      color: #0CDD9E; }
+  button.grey, .button.grey {
+    background: #777777;
     color: white; }
-  .button.facebook, button.facebook {
-    background-color: #3D5B99;
+    button.grey.bordered, .button.grey.bordered {
+      background: transparent;
+      border: 1px solid #777777;
+      color: #777777; }
+  button.white, .button.white {
+    background: #FFF;
     color: white; }
-  .button.twitter, button.twitter {
-    background-color: #2894F3;
-    color: white; }
-  .button.white, button.white {
-    background: white;
-    color: #49565E; }
-    .button.white:hover, button.white:hover {
-      background: #f2f2f2; }
-  .button.small, button.small {
-    padding: 12px 20px;
-    font-size: 14px; }
-    .button.small.rounded, button.small.rounded {
-      -webkit-border-radius: 15px;
-      -moz-border-radius: 15px;
-      -ms-border-radius: 15px;
-      -o-border-radius: 15px;
-      border-radius: 15px; }
-  .button.medium, button.medium {
-    padding: 16px 20px;
-    font-size: 1.14286rem; }
-  .button.large, button.large {
-    font-size: 18px;
-    padding: 18px 36px; }
+    button.white.bordered, .button.white.bordered {
+      background: transparent;
+      border: 1px solid #FFF;
+      color: #FFF; }
 
 * {
   -webkit-box-sizing: border-box;
@@ -98,7 +103,7 @@ html {
   font-weight: 400;
   font-family: "avenir next", Helvetica, Arial, sans-serif;
   line-height: 1;
-  color: #A7A8A3;
+  color: #777777;
   min-height: 100%;
   height: 100%; }
 
@@ -160,6 +165,71 @@ h1, h2, h3, h4, h5, h6 {
   h1.line-height-reset, h2.line-height-reset, h3.line-height-reset, h4.line-height-reset, h5.line-height-reset, h6.line-height-reset {
     line-height: 1; }
 
+.text-x-small {
+  font-size: 12px; }
+  @media screen and (min-width: 720px) {
+    .text-x-small {
+      font-size: 12px; } }
+  @media screen and (min-width: 960px) {
+    .text-x-small {
+      font-size: 12px; } }
+
+.text-small {
+  font-size: 12px; }
+  @media screen and (min-width: 720px) {
+    .text-small {
+      font-size: 14px; } }
+  @media screen and (min-width: 960px) {
+    .text-small {
+      font-size: 14px; } }
+
+.text-base {
+  font-size: 14px; }
+  @media screen and (min-width: 720px) {
+    .text-base {
+      font-size: 16px; } }
+  @media screen and (min-width: 960px) {
+    .text-base {
+      font-size: 16px; } }
+
+.text-medium {
+  font-size: 16px; }
+  @media screen and (min-width: 720px) {
+    .text-medium {
+      font-size: 18px; } }
+  @media screen and (min-width: 960px) {
+    .text-medium {
+      font-size: 20px; } }
+
+.text-medium-large {
+  font-size: 18px; }
+  @media screen and (min-width: 720px) {
+    .text-medium-large {
+      font-size: 20px; } }
+  @media screen and (min-width: 960px) {
+    .text-medium-large {
+      font-size: 24px; } }
+
+.text-large {
+  font-size: 24px; }
+  @media screen and (min-width: 720px) {
+    .text-large {
+      font-size: 28px; } }
+  @media screen and (min-width: 960px) {
+    .text-large {
+      font-size: 28px; } }
+
+.text-x-large {
+  font-size: 42px;
+  line-height: 1.4; }
+  @media screen and (min-width: 720px) {
+    .text-x-large {
+      font-size: 42px; } }
+  @media screen and (min-width: 960px) {
+    .text-x-large {
+      font-size: 48px;
+      line-height: 1; } }
+
 p {
   line-height: 1.6; }
 
@@ -190,10 +260,10 @@ h2, .h2 {
   font-size: 24px; }
   @media screen and (min-width: 720px) {
     h2, .h2 {
-      font-size: 32px; } }
+      font-size: 28px; } }
   @media screen and (min-width: 960px) {
     h2, .h2 {
-      font-size: 32px; } }
+      font-size: 28px; } }
 
 h3, .h3 {
   font-size: 18px; }
@@ -230,6 +300,9 @@ h6, .h6 {
   @media screen and (min-width: 960px) {
     h6, .h6 {
       font-size: 12px; } }
+
+.text-muted {
+  color: #BABABA; }
 
 .divider {
   border-bottom: 1px solid #EFEFEF;
