--- a/docs/views/_header.html
+++ b/docs/views/_header.html
@@ -5,12 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My Divshot Application</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script> -->
+  <script src="highlight.pack.js"></script>
   <link rel="stylesheet" href="../docs/docs.css">
+  <link rel="stylesheet" href="docco.css">
   <!-- Typekit !-->
   <script src="//use.typekit.net/zvy0qyb.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
+  <script>hljs.initHighlightingOnLoad();</script>
   <!-- / Typekit !-->
  <!--  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -25,8 +28,9 @@
 </head>
 <script>
   $(document).ready(function() {
-    $(".sidebar-nav ul > li").click(function(e) {
+    $(".sidebar-nav ul > li > a").click(function(e) {
       // e.preventDefault();
+      $(this).toggleClass("is-active");
       $(this).children("ul").slideToggle();
     });
   });
@@ -36,29 +40,76 @@
   <a href="index.html" class="logo">
   <div class="sidebar-nav">
     <ul>
-      <li><a href="intro.html">Getting Started</a></li>
-      <li><a href="grid.html">Layout</a></li>
-      <li><a href="components.html">Components</a></li>
-      <li><a href="theme.html">Theming</a></li>
+      <li>
+        <a href="intro.html">Getting Started</a>
+        <ul id="intro">
+          <li><a href="theme.html#overview">Intro &amp; Quick Setup</a></li>
+          <li><a href="theme.html#overview">Who's This For?</a></li>
+          <li><a href="theme.html#overview">Principles</a></li>
+          <li><a href="theme.html#overview">Acknowledgements</a></li>
+          <li><a href="theme.html#overview">Browser Support</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="grid.html">Layout</a>
+        <ul id="grid">
+          <li><a href="theme.html#overview">Containers</a></li>
+          <li><a href="theme.html#overview">Rows &amp; Columns</a></li>
+          <li><a href="theme.html#overview">Gutters</a></li>
+          <li><a href="theme.html#overview">Offsets</a></li>
+          <li><a href="theme.html#overview">Grid Generator</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="components.html">Components</a>
+        <ul>
+          <li><a href="theme.html#overview">Buttons</a></li>
+          <li><a href="theme.html#overview">Dropdown</a></li>
+          <li><a href="theme.html#overview">Navigation</a></li>
+          <li><a href="theme.html#overview">Form</a></li>
+          <li><a href="theme.html#overview">Typography</a></li>
+          <li><a href="theme.html#overview">Tabs</a></li>
+          <li><a href="theme.html#overview">Overview</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="theme.html">Theming</a>
+        <ul>
+          <li><a href="theme.html#overview">Overview</a></li>
+          <li><a href="theme.html#overview">Settings File</a></li>
+          <li><a href="theme.html#overview">Global Breakpoints</a></li>
+          <li><a href="theme.html#overview">Colors</a></li>
+          <li><a href="theme.html#overview">Stacking</a></li>
+        </ul>
+      </li>
       <li>
         <a href="helpers.html">Helpers</a>
         <ul>
-          <li><a href="#background-color" class="is-active">Background-color</a></li>
-          <li><a href="#borders" class="is-active">Borders</a></li>
-          <li><a href="#colors" class="is-active">Colors</a></li>
-          <li><a href="#display" class="is-active">Display</a></li>
+          <li><a href="#background-color">Background-color</a></li>
+          <li><a href="#borders">Borders</a></li>
+          <li><a href="#colors">Colors</a></li>
+          <li><a href="#display">Display</a></li>
         </ul>
       </li>
       <li>
         <a href="mixins.html" class="is-active">Mixings</a>
         <ul>
-          <li><a href="mixins.html" class="is-active">Box-shadow</a></li>
-          <li><a href="mixins.html" class="is-active">Box-shadow</a></li>
-          <li><a href="mixins.html" class="is-active">Box-shadow</a></li>
-          <li><a href="mixins.html" class="is-active">Box-shadow</a></li>
-          <li><a href="mixins.html" class="is-active">Box-shadow</a></li>
-          <li><a href="mixins.html" class="is-active">Box-shadow</a></li>
+          <li><a href="mixins.html#1">Animation</a></li>
+          <li><a href="mixins.html#1">Background Images</a></li>
+          <li><a href="mixins.html#1">Border Radius</a></li>
+          <li><a href="mixins.html#1">Borders</a></li>
+          <li><a href="mixins.html#1">Box Shadow</a></li>
+          <li><a href="mixins.html#1">Ellipsis</a></li>
+          <li><a href="mixins.html#1">Lists</a></li>
+          <li><a href="mixins.html#1">Sliding Panel</a></li>
+          <li><a href="mixins.html#1">Responsive</a></li>
+          <li><a href="mixins.html#1">Transition</a></li>
+          <li><a href="mixins.html#1">Triangle</a></li>
+          <li><a href="mixins.html#1">Transform</a></li>
         </ul>
+      </li>
+      <li>
+        Resources & Acknowledgements
       </li>
       Facebook, twitter, LinkedIn
       <!-- <li><a href="theme.html">Gallery</a></li>
@@ -71,6 +122,6 @@
   <div class="actions">
     <a class="button primary bordered small rounded">Download</a>
   </div>
-  <div class="typography">
+  <div class="typography container-narrow">
 
   
