--- a/docs/views/mixins.jade
+++ b/docs/views/mixins.jade
@@ -3,34 +3,7 @@ include _header.html
 h2 Animation
 
 
-p
-	| Using multiples of this unit allows us to estlablish a consisten rtthm
-	| and consistency throughout the platform. There are cases where you don't necessarily want to use exact multuples (for instance, buttons), but in many cases this
-	| does help. 
 
-p These values can be accessed throughout your code using the sizes() function. 
-pre
-	code.language-scss
-		| .primary-header-site {
-		|		padding: sizes(base);
-		|   margin-bottom: sizes(double);
-		| }
-
-
-h2 Normalise
-//- Pure was crafted with the goal that it can be used in every web project. To showcase this, we've made some common layouts that leverage Pure. These layouts are responsive and don't require JavaScript (except for certain menu interactions).
-
-//- When viewing these layouts, view or copy the source to get a good understanding of what's happening.
-
-//-  Screenshot of Blog example layout.
-//- Blog
-
-//- A layout example that shows off a blog page with a list of posts.
-
-//- Base
-//- Grids
-//- Buttons
-//- Menus
 
 <!-- Backgrounf Images !-->
 h2 Background Images
@@ -90,6 +63,22 @@ pre
 	code.language-scss
 		| +ellipsis($width)
 
+
+h2 Margin &amp; Padding
+p
+	| Using multiples of this unit allows us to estlablish a consisten rtthm
+	| and consistency throughout the platform. There are cases where you don't necessarily want to use exact multuples (for instance, buttons), but in many cases this
+	| does help. 
+
+p These values can be accessed throughout your code using the sizes() function. 
+pre
+	code.language-scss
+		| .primary-header-site {
+		|		padding: sizes(base);
+		|   margin-bottom: sizes(double);
+		| }
+
+
 h2 Lists
 | +list(bordered, 2rem, clickable, removable)
 
@@ -120,16 +109,3 @@ p Creates a triangle, used on tooltips, dropdown menus etc.
 pre
 	code.language-scss
 		| +transition($direction, $width, $color)
-
-
-h2 Rems, Raiots, Clearfix
-
-h1 Z-index
-
-h1 Colors
-
-h1 Responsive
-p 
-	| The responvie mixin uses the breakpoints specified int he breakpoints.scss file. By default, the following are included. 
-
-h2 Transform
